--- a/Thesis/Final_thesis_LMD_v1.tex
+++ b/Thesis/Final_thesis_LMD_v1.tex
@@ -160,7 +160,14 @@
 	
 	Having ample and correct precipitation data is important for a plethora of applications, including flood warnings, agriculture, river safety and shipping routes \shortcite{Chwala2019}. In urban areas, an even higher spatial and temporal resolution of rainfall is needed, due to the complex and quickly responding urban hydrological system \shortcite{Overeem2011}. A high rain gauge density can help in providing this resolution in urban areas \shortcite{Yoon2017}, but is not always availabe. Commercial Microwave Links (CML) do typically have a high density in populated areas and could therefore help in retrieving these high-resolution urban precipitation data. CML are back-haul links used by telecommunication companies to transfer information from one telecom station to the next using microwave signals. The links' signals get attenuated by rainfall by means of scattering and absorption. The received signal level is measured and stored by the telecommunication companies for monitoring purposes and can be used to retrieve path-averaged rainfall rates by calculating the attenuation. In the past 25 years, CML have been recognized as a valuable opportunistic method to measure rainfall \shortcite{Leijnse2007, Ruf1996}. Especially in data-scarce areas, where little precipitation is measured, CML have proven to be an excellent additional information source for precipitation data \shortcite{Overeem2021,Doumounia2014,Diba2021}. Recent research has been focussing on the use of CML data to measure rainfall in tropical regions, amongst others Sri Lanka \cite{Overeem2021} and Brazil \cite{RiosGaona2017a}. Although operational use of CML signal as precipitation data source is mainly limited by the availability and accessibility of the signal data, the technique has been widely researched.
 	
-	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power Law (PL) to relate the attenuation of the signal and the rainfall rate \shortcite{Overeem2011,Leijnse2007}.Several methods have been constructed based on this PL, including RAINLINK \shortcite{Overeem2011}. This method, which includes a wet-dry classification, baseline estimation, wet antenna attenuation estimation and finally a rainfall rate retrieval, has yielded good results in multiple studies \shortcite{deVos2019,Graf2020,Fencl2017}. Recently, the community has been exploring a more data-driven approach in the form of neural networks of different architectures. Neural networks are a subpart of Machine Learning that is inspired by the neural structure of the brain. A neural network consists of different layers of nodes (neurons) that are connected to each other. If the network contains more than one layer, it is considered a deep network and Deep Learning is used as equivalent naming. A neural network is able to learn the relationship between the input and output, without intervention from a researcher. Studies have been performed in Sweden, Israel \shortcite{Habi2019}, Germany \shortcite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. Most of these use RAINLINK or a similar method as a benchmark. Previous studies have shown that data-driven models can be more accurate, less time-demanding and more robust in estimating rainfall rates compared to the PL method \shortcite{Polz2020,Pudashine2020}.  Neural networks are not a novelty in predicting rainfall \shortcite{French1992}, but the application to CML data has recently gained popularity.
+	The first studies on the use of CML signals to retrieve rainfall rates were done by using a specific Power Law (PL) to relate the attenuation of the signal and the rainfall rate \shortcite{Overeem2011,Leijnse2007}.Several methods have been constructed based on this PL, including RAINLINK \shortcite{Overeem2011}. The RAINLINK methodology can be described with 4 steps: 
+	\begin{enumerate}
+		\item wet-dry classification
+		\item baseline estimation
+		\item wet antenna attenuation estimation
+		\item rainfall rate retrieval
+	\end{enumerate}
+	This method has yielded good results in multiple studies \shortcite{deVos2019,Graf2020,Fencl2017}. Recently, the community has been exploring a more data-driven approach in the form of neural networks of different architectures. Neural networks are a subpart of Machine Learning that is inspired by the neural structure of the brain. A neural network consists of different layers of nodes (neurons) that are connected to each other. If the network contains more than one layer, it is considered a deep network and Deep Learning is used as equivalent naming. A neural network is able to learn the relationship between the input and output, without intervention from a researcher. Studies have been performed in Sweden, Israel \shortcite{Habi2019}, Germany \shortcite{Polz2020}, South Korea and Ethiopia \cite{Diba2021} on the use of such data-driven networks in relating CML signals to rainfall rates. Most of these use RAINLINK or a similar method as a benchmark. Previous studies have shown that data-driven models can be more accurate, less time-demanding and more robust in estimating rainfall rates compared to the PL method \shortcite{Polz2020,Pudashine2020}.  Neural networks are not a novelty in predicting rainfall \shortcite{French1992}, but the application to CML data has recently gained popularity.
 	
 	\begin{figure}[t]
 		\includegraphics[width=8cm]{Transfer_learning_concept}
@@ -196,6 +203,7 @@
 	\chapter{Field site and data}\vspace{-6mm}
 	\label{ch: field}
 	Some text here about how the field site and data are structured? YES!
+	DOI van dataset als hij op de 4Tu website staat! 
 	
 	\section{Commercial Microwave Link data}
 	\subsection{Netherlands}
@@ -329,19 +337,19 @@
 	%%%%%%
 	
 	\chapter{Methods} \label{ch: methods}
-	This chapter describes the methodology of this study. The chapter starts with a general explanation on neural networks and their functioning, to get acquainted with terms and parameters in Section \ref{NN explain}. Section~\ref{datapreprocess} deals with the preprocessing of the input data to the model and subsequently model selection is described in Section~\ref{modelselection}. The combination of neural networks and the input data in this study is discussed in Section (>>>>). Section~\ref{EvalStats} is concerned with the validation of the model results and performance of the model related to the benchmark method RAINLINK. The final part of this chapter deals with transfer learning and how this is applied in this study (Section~\ref{transferlearning})
-	\section{Neural network explanation} \label{NN explain}
-	\subsection{Goal and concepts of neural networks} \label{NNConcepts}
+	This chapter describes the methodology of this study. The chapter starts with a general explanation on neural networks and their functioning, to get acquainted with terms and parameters in Section \ref{sec: NN explain}. Section~\ref{sec: datapreprocess} deals with the preprocessing of the input data to the model and subsequently model selection is described in Section~\ref{modelselection}. Which model runs and how their results are evaluated will be treated in Section~\ref{sec: EvalStats}. The final part of this chapter deals with transfer learning and how this is applied in this study (Section~\ref{transferlearning})
+	\section{Neural network explanation} \label{sec: NN explain}
+	\subsection{Goal and concepts of neural networks} \label{sec: NNConcepts}
 	Neural networks are a subset of models within the Machine Learning (ML) environment. All models within the ML space are data-driven, i.e. without pre-specified relationships between input and output. These data-driven models aim to figure out this relationship via self-learning techniques.
-	The biggest advantages of such models are that 1) they are very versatile: they can adapt to various circumstances and can be used in a wide range of applications, and 2) they can learn relationships that we do not have a physical explanation for yet. Through multiple iterations, the models can improve by minimizing or maximizing a loss function. The loss function can be interpreted as a score for the model: the worse the score, the more the model needs to adjust itself (see Section~\ref{Learning NN}).It improves by optimizing parameters of differential equations in the model. Similar to physically-based models, it is up to the modeler to determine when the model performs well enough. The self-learning ML models will stop learning after a certain criterion is met, or when a specified number of iterations has passed.
+	The biggest advantages of such models are that 1) they are very versatile: they can adapt to various circumstances and can be used in a wide range of applications, and 2) they can learn relationships that we do not have a physical explanation for yet. Through multiple iterations, the models can improve by minimizing or maximizing a loss function. The loss function can be interpreted as a score for the model: the worse the score, the more the model needs to adjust itself (see Section~\ref{sec: Learning NN}).It improves by optimizing parameters of differential equations in the model. Similar to physically-based models, it is up to the modeler to determine when the model performs well enough. The self-learning ML models will stop learning after a certain criterion is met, or when a specified number of iterations has passed.
 	
 	Neural networks are inspired by the structure of the human brain with neurons and synapses, hence the name neural network. The network consists of one or multiple layers of nodes that are connected with each other. When the network has more than one layer, it is called a deep neural network and it is referred to as Deep Learning. Every single connection between nodes (or between nodes and input/output) is represented by a weight and a bias. These weights and biases are the bread and butter of neural networks. They determine the underlying relationships between different parts of the input signal, the connections within the model and the relation to the final output. Training a neural network is all about adjusting the weights and biases in such a way that the desired output is created. At every node, a weighted sum is calculated based on these weights and biases and it is passed to an activation function. This activation function yields one value, which will be passed to the following nodes in the model.
 	Because of the very general structure of neural networks, they form a very versatile set of models. Research efforts in neural networks span from image classification and speech recognition to time series prediction and weather forecasts.
 	
-	\subsection{Neural network architectures} \label{NN architecture}
+	\subsection{Neural network architectures} \label{sec: NN architecture}
 	The versatility of neural networks allows for a wide range of different model architectures to choose from. Every architecture has its own strengths and weaknesses. For image recognition for example, the most common type of neural network is a convolutional neural network (CNN). In time series prediction, the most common architecture is the recurrent neural network (RNN), which is therefore most suited for precipitation estimation using Commercial Microwave Links.
 	
-	RNNs are looping-based architectures, which make them ideal for dealing with sequences. The core unit of RNNs, the Recurrent Unit (the lightgreen blocks in Figure \ref{fig: multilayer RNN}), is used multiple times. The output of the unit is added to the input of the next step in the same recurrent unit. This creates an architecture that is well suited for time series with sequential data patterns. How many layers of these recurrent units are used in a model depends on the modeler and can be tuned (see Section \ref{modelselection})
+	RNNs are looping-based architectures, which make them ideal for dealing with sequences. The core unit of RNNs, the Recurrent Unit (the lightgreen blocks in Figure \ref{fig: multilayer RNN}), is used multiple times. The output of the unit is added to the input of the next step in the same recurrent unit. This creates an architecture that is well suited for time series with sequential data patterns. How many layers of these recurrent units are used in a model depends on the modeler and can be tuned (see Section \ref{sec: modelselection})
 	
 	One of the limitations of default RNNs is the lack of memory in the model. Information from the start of a sequence is quickly lost throughout the model. A Long Short Term Memory (LSTM) model circumvents this problem by having an extra stream of information. This stream of information carries aspects of the previous time steps and can be viewed as a 'memory highway'. Every layer of the network has a separate memory stream which carries information from the start of the sequence. At every LSTM cell, information is taken from the memory state as input to the cell, and an adapted memory state is given as output. Most cells in an LSTM model have three input streams: the memory state, the new input state and the hidden output state from the previous time step. Within each cell, the three input streams are used to produce three output states as well: the updated memory state, a hidden output for the next cell in the sequence and a hidden output for the next layer in the model. The conversion from these three inputs to three outputs is where the weights and biases come into play in an LSTM model. As an LSTM cell is a recurrent cell as well, there is one cell with weights and biases per layer of the network. Information is recurrently added to this cell. A schematic representation of the model used in this study can be found in figure~\ref{fig: multilayer RNN}.
 	
@@ -357,7 +365,7 @@
 		\label{fig: multilayer RNN}
 	\end{figure*}
 	
-	\subsection{Learning process of neural networks} \label{Learning NN}
+	\subsection{Learning process of neural networks} \label{sec: Learning NN}
 	The self-learning ability of neural networks is mainly relying on the loss function. The model calculates the error between its output and the target output and tries to adjust accordingly. The selected loss function determines amongst others the behavior of the model. In this study, a standard Mean Square Error (MSE) loss function is used as a basis (see Eq.~\ref{eq: MSE}).
 	\begin{equation} \label{eq: MSE}
 		MSE = \frac{1}{n} \sum_{i=1}^{n} (y_i - \hat{y})^2
@@ -390,7 +398,7 @@
 	To update and improve the model prediction, an optimizer (or propagation algorithm) is selected. Such an optimizer is a mathematical set of equations that determines how the model learns. In this study, the Adaptive Moment (ADAM) optimizer will be used. ADAM is one of the more recently introduced optimizers and has been shown to outperform other optimizations methods. \cite{Kingma2014} In simple terms: the method is looking for an optimum (minimum or maximum) per weight. Based on this gradient, the weight is adjusted up or down to minimize the loss function. As calculating the full gradient field for all weights present in the model is a tedious task, ADAM is stochastic method, which means it takes a randomly selected subset of the data and uses that to calculate the gradients. This might lead to more steps, but the steps are less computationally intensive and typically lead to an improved performance.  
 	The ADAM optimizer is back-propagated. This implies that the final layer of the network is updated first and the learning process works itself back to the start of the model. In this study, the fully connected layer at the end of the LSTM is updated first before the model improves and adjusts the LSTM cells itself. A back-propagated model is chosen in this study since it is the most common type of neural network, easy to implement, fast, flexible and generally good \cite{Staudemeyer2019}.
 	
-	\subsection{Available hyperparameters} \label{Avail hyper}
+	\subsection{Available hyperparameters} \label{sec: Avail hyper}
 	The versatility of neural networks is generally perceived as one of the biggest advantages of these type of models. However, it does leave the modeller with a lot of options to choose from in creating a neural network for their specific task. The parameters that refer to the architecture and set-up of the neural network are called hyperparameters. Table~\ref{tab: hyperparamtable} highlights the available hyperparameters in this model. The hyperparameters will, for the purpose of this thesis, be divided in three groups: Structure, Data and Effiency. Structure hyperparameters relate to the structure of the model: how is it designed and how often will it run. Data parameters are related to the input data into the model; the type of data and the goal with the data determine these hyperparameters. The Efficiency group entails hyperparameters that relate to the time it takes the model to run. In this group, there's always a balance between performance and computational intensity. It should be noted that in the end, all hyperparameters influence the computational speed of the model in some way or another. The proposed grouping is not strict but rather serves the purpose of dealing with hyperparameters with a specific function in a structured way.
 	
 	\begin{table*}[ht]
@@ -425,7 +433,7 @@
 	The process of calibrating hyperparameters in order to find an optimal combination (if it exists) is refered to as tuning. Not all hyperparameters were automatically tuned. Only the Structure hyperparameters were tuned, as the other two hyperparameter groups need to be determined based on the input data and the available computational resources. More details on the automatically tuned Structure hyperparameters can be found in Section \ref{RayTune}. The Data and Efficiency group of hyperparameters are set based on convenience and literature study and will be elaborated on in Section \ref{Nonauto tuning}.
 	
 	
-	\section{Data preprocessing} \label{datapreprocess}
+	\section{Data preprocessing} \label{sec: datapreprocess}
 	\subsection{Connecting CML and reference data}
 	To train the model, a feature set (received signal levels) and a target set (precipitation observations) is needed. For every separate CML link and every time step, the corresponding amount of precipitation has been determined. To obtain this value, the middle point of each link has been determined and connected to the corresponding radar cell. This midpoint method is commonly used in CML research (refs). More elaborate methods have been used by \shortciteA{Leijnse2007} for example, where a weighted sum of all cells that the link passes through was created. The impact of this decision will be discussed further on in this thesis.
 	\subsection{Error filtering}
@@ -443,23 +451,24 @@
 	The data for the Netherlands has been split in a 40\%/40\%/20\% for training, validating and testing respectively. Previous studies use varying ratios to split the data, with the one common aspect being a smaller validation set compared to the training and testing \cite{Polz2020,Diba2021,Pudashine2020}. This particular split has been chosen as a rough average of these varying ratios.
 	The year 2011 is used for training, 2012 for testing and 2013 (up until July 21st) for validating. By taking full years for training and testing, all seasons are incorporated and the datasets are assumed to be closer to being identically distributed. Considerations on and implications of this split will be discussed later on in this thesis in section \ref{sec: datasplitting}
 	
-	Having large outliers and ranges in the input data can cause the SGD algorithm to have exploding gradients. Therefore, a scaling has been applied to the features and targets. Using a log-transformation on precipitation data has been done before \cite{Kilmartin1972}. To deal with zero values, which are ominous in precipitation data, and to handle extreme values better, Burbidge \citeA{Burbidge1988} introduced the inverse hyperbolic sine transformation. This transformation is defined as in Eq~\ref{eq: logsine}.
+	Having large outliers and ranges in the input data can cause the Adam algorithm to have exploding gradients. Therefore, a scaling has been applied to both the features and targets. 
+	The targets (precipitation observations) have been scaled using a inverse hyperbolic sine transformation, which is a variant on the more common log transformation \cite{Kilmartin1972}. To deal with zero values, which are ominous in precipitation data, and to handle extreme values better, Burbidge \citeA{Burbidge1988} introduced the inverse hyperbolic sine transformation. This transformation is defined as in Eq~\ref{eq: logsine}.
 	
 	\begin{equation}
 		\label{eq: logsine}
 		y_t = \log(y_i + \sqrt{y_i^2 + 1})
 	\end{equation}
 	where $y_t$ is the transformed variable and $y_i$ is the raw variable.
-	Afterwards, they were scaled with the minimum and maximum per dataset, to create a value between 0 and 1. As three separate datasets were used, this implies three slightly different scalings. As the goal is to minimize information leakage from one dataset to the next, this separated scaling is preferred, in order to not further violate the aforementioned IID assumption.
+	Afterwards, the logsine-transformed precipitation data were scaled with the minimum and maximum per dataset, to create a value between 0 and 1. As three separate datasets were used, this implies three slightly different scalings. As the goal is to minimize information leakage from one dataset to the next, this separated scaling is preferred, in order to not further violate the aforementioned IID assumption.
 	
-	The features (RSL) have been scaled differently. As the base level of each CML is dependent on the frequency and the distance of the link, the median of each link has been subtracted from the signal. Subsequently, the data has been divided by the standard deviation per dataset to obtain values that are closer to eachother.  
+	The features (RSL) have been scaled differently. As the base level of each CML is dependent on the frequency and the distance of the link, the median of each link has been subtracted from the signal. Subsequently, the data has been divided by the standard deviation per dataset to obtain values that are closer to eachother. By subtracting the median of each link from the signal, a very crude form of baseline estimation has been applied (step 3 in the RAINLINK methodology). As data needs to be rescaled anyways in order to avoid exploding or vanishing gradients, this specific scaling has been included in the methodology of this study. 
 	
 	
 	
-	\section{Model selection} \label{modelselection}
+	\section{Model selection} \label{sec: modelselection}
 	This section deals with selecting the right model structure for the study at hand. It is worth noting that there might be multiple combinations of hyperparameters that lead to the same results (a variant on the concept of equifinality). In section~\ref{sec: Equifinality} this concept will be elaborated on and the impact on the followed procedure will be discussed.
 	
-	\subsection{Automated hyperparameter tuning} \label{RayTune}
+	\subsection{Automated hyperparameter tuning} \label{sec: RayTune}
 	A full grid search on all hyperparameters available to find the best combination is computationally infeasible. Therefore, this study uses 25 random combinations of hyperparameters, all within a limited range of values. This number of combinations is chosen to have a trade-off between computational intensity and having ample combinations to ensure a decent search.
 	Selecting the combinations is done using the RayTune package, which is a tuning-specific Python package that interacts with PyTorch (used in this study) and other Deep Learning packages. This study uses the Async Successive Halving Algorithm Scheduler (ASHA) to effectively search the hyperparameter space. The ASHA Scheduler is able to effectively implement parallelism (to decrease runtime) and a hard early stopping mechanism to terminate runs if they are not amongst the best few models after a while \cite{Li2018}. The ASHA Scheduler is the most common scheduler available in RayTune and performs well in most cases when no specific instructions regarding hyperparameter tuning are needed.  
 	The best combination of hyperparameters is used to calculate the model performance based on the final independent testset. The ranges for the calibrated hyperparameters can be found in Table~\ref{tab: raytunetable}
@@ -473,32 +482,39 @@
 			\hline
 			$Hyperparameter$&$Range$\\
 			\hline
-			Hidden size&$[64,128,256]$\\
+			Hidden size&$[8,32,64,128,256]$\\
 			Learning rate&$1e^{-6} - 1e^{-3}$\\
-			Number of epochs&$(10 - 40)$\\
+			Number of epochs&$(10 - 50)$\\
 			Number of layers&$[2,4,8,16]$\\
 			\hline
 		\end{tabular}
 	\end{table}
 	
-	\subsection{Non-automated hyperparameter tuning} \label{Nonauto tuning}
+	\subsection{Non-automated hyperparameter tuning} \label{sec: Nonauto tuning}
 	Hyperparameters that are related to the data rather than the model itself are not tuned automatically. Hyperparameters in the Data group are tuned, but in a slightly less rigid way as it is easier to deduct which values should perform well on the input data.
 	The sequence length is partly determined by how long rainfall events typically last in the Netherlands and their autocorrelation. As a starting value, a sequence length of 8 (15-min) timesteps is used. This means that the past two hours are used to predict the rainfall rate at the current time step. A sequence length of one hour (4 timesteps) and three hours (12 timesteps) will be evaluated as well to inspect the impact of a different sequence length.
 	The loss function has a direct relation to the distribution of the input data. The chosen loss function (\ref{eq: final_loss} should be able to deal with the skewedness of the data. To check if this is the case and whether the extra effort of including a RDF is worth it, a normal MSE loss function (\ref{eq: MSE} will be tested as well.
 	
 	From the Efficiency group, the batch size is the most important hyperparameter to evaluate.\citeA{Kandel2020} described the effect of the batch size on the final performance of the model. The batch size and the learning rate are intimately linked: a smaller batch size requires a lower learning rate and vice versa. A batch size of 32 is used as standard, but the options of batch sizes of 64 and 128 are explored as well. A batch size of 32 has been shown to be a good default value \cite{Bengio2012}. Using a power of 2 as batch size is common to fully use GPU processing power.
 	
-	\section{Experimental setup and evaluation of results} \label{EvalStats}
-	In this section, I will explain how I combined all the information above. 
-	Start of with creating the LSTM. Use a RDF MSE function, batchsize 32, sequence length of 8 and tune other hyperparameters automatically. Include the selected hyperparametersets here, not only in the results.
-	The best model out of this tuning is used to test loss function, batch size and sequence length. As this is mainly concerned with looking at the trends in the different hyperparameter sets, I will perform these sensitivity analyses separate from each other (no Latin Hypercube Sampling or Monte Carlo for example: its about the idea)
-	Results: 25 runs with one optimal combination: show the different losses present, how they evolve over the number of epochs and which one is optimal in the end.
-	One run that is used with 3 different batch sizes
-	One run that is run with 3 different loss functions
-	One run that is run with 3 different sequence lengths
-	
-	Four results in the end that are presentable in a way.
+	\section{Experimental setup and evaluation of results} \label{sec: EvalStats}
+	For this study, different model runs are performed. In the first run, all automatically tuned hyperparameters mentioned in Section~\ref{RayTune} are included. The 25 different randomly chosen model runs, as picked by the random selector in RayTune, are depicted in Table (INCLUDE TABLE WHEN ANUNNA IS READY). The model run with the best score on the independent test set will be used to test different non-automatically tuned hyperparameter settings. This results in three more combinations of model runs, where the batch size, the loss function and the sequence length are evaluated respectively with their ranges as put in Section~\ref{sec: Nonauto tuning}.
+	For the final model run, only timesteps that show precipitation are taken into account. This functions as a very crude wet-dry classification, the first step in the RAINLINK methodology. By running the model only on rain samples, we investigate the impact of using such a wet-dry classification, as multiple previous studies included a model part on this step \cite{Habi2019}.
 
+	The model results will be evaluated using the coefficient of determination (R$^{2}$, see Eq~\ref{eq: R2}), the Coefficient of Variation (CV, Eq~\ref{eq: CV}) and the Root Mean Square Error (RMSE, Eq~\ref{eq: RMSE}).
+	\begin{equation} \label{eq: R2}
+		R^2 = 1- \frac{\sum_{i=1}^{N} (\hat{y}_i - y_i)^2}{\sum_{i=1}^{N} (y_i - \bar{\hat{y_i}})^2}
+	\end{equation}
+
+	\begin{equation} \label{eq: CV}
+		CV = \frac{\sigma}{\bar{y}}
+	\end{equation}
+
+	\begin{equation} \label{eq: RMSE}
+		RMSE = \sqrt{\frac{1}{n} \sum_{i=1}^{n} (y_i - \hat{y_i})^2}
+	\end{equation}
+	where $y_i$ is the predicted 15-min precipitation rate, $\hat{y_i}$ is the observed 15-min precipitation rate and $\sigma$ is the standard deviation of the predicted 15-min precipitation rate.
+	These statistical evaluation metrics will be able to tell something about the fit of the model prediction to the observed values.2- The selected metrics are based on similar studies that use these metrics to evaluate their model performance \shortcite{Overeem2011, Pudashine2020,Diba2021}.
 	
 	%%%%%%
 	% RESULTS
@@ -507,7 +523,7 @@
 	\chapter{Results} \label{ch: results}
 	\section{The Netherlands}
 	Ideas: table with different hyperparameter sets and the best one out of all these.
-	Line graph with 25 different lines: all the runs that are performed at once and to see the difference in their learning behaviour/where they end up.
+	Line graph with 25 different lines: all the runs that are performed at once and to see the difference in their learning behaviour/where they end up. ONly the line that actually matters black, others can be greyed out.
 	
 	Performance on training, testing and validation set for the best one
 	
@@ -530,11 +546,17 @@
 	The chosen years are not identical in their precipitation distributions. The year 2011 was somewhat drier than average, with a particularly dry spring. 2012 was slightly wetter than average, with above average precipitation in the first and last month of the year. Finally, 2013 had a dry winter with some snow and a very wet autumn, yielding a yearly average precipitation considerably lower than average. (SOURCE: KNMI?)  
 	This inconsistency in precipitation over the years violates the IID assumption that underpins the datasplit. It highlights the tradeoff that has been made in creating this split. Ideally, all datasets would have an equal precipitation distribution. However, wherever two datasets meet in time, there is a chance of information leaking from one dataset to the other. If the years would have been reshuffled to create a more identically distributed split, there would have been more information leaking from one set to the other and the independence of the datasets would have been at stake. Therefore, this split by full years was still preferred, to minimize information leakage. For the test set, half a year is taken due to limitations in data availability. As the validation set is only used to judge the final model, and not to update the model anymore, this dataset can be smaller as in (LITERATURE).
 	
+	\textbf{Include a part on discussing the impact of not having a valid IID assumption - multiple papers!}
+	
 	\subsection{Equifinality and optimal hyperparameter combination} \label{sec: Equifinality}
 	Trying out different types of NN and different hyperparameters: thousands to choose from
 	
 	\subsection{No signal picked up} \label{sec: no results}
 	More preprocessing of the data: stronger error filtering, only including the wet events (so wet-dry classficiation). Separate models with separate architectures for the different parts of the algorithm: a classifying CNN for the wet/dry, LSTM for baseline estimation, normal ANN for WAA and another LSTM for the final rainfall retrieval.
+	
+	\subsection{Outlook}
+	Wat is de manier verder vanaf hier: wat zou wel kunnen werken? 
+	
 	%%%%%%%%%%%%
 	% CONCLUSION
 	%%%%%%%%%%%%
@@ -552,8 +574,8 @@
 	\addcontentsline{toc}{chapter}{Acknowledgements}   % to get acknowledgements in table of contents
 	
 	Don't forget to thank the people who gave you data!
-	
-	
+	T-Mobile Ralph Koppelaar \& Ronald Kloeg 
+	Aart Overeem
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	% BIBLIOGRAPHY
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
